# interviewPrep_AI

./: .gitignore  README.md  RUN_LOCALLY.md  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: __init__.py  ai_policy.py  config.py  database.py  main.py
backend/app/models/: __init__.py  interview.py
backend/app/routers/: admin.py  auth.py  exams.py  experiences.py  jobs.py  mock_interviews.py  prep_plans.py  study_notes.py
backend/app/schemas/: admin.py  auth.py  exam.py  experience.py  job_analysis.py  mock_interview.py  prep_plan.py  study_note.py
backend/app/services/: auth_service.py  email_service.py  exam_service.py  experience_service.py  gemini_service.py  job_analyzer.py  job_source.py  mock_interview_service.py  persistence.py  planner.py  research_service.py  study_note_service.py  usage_service.py
backend/migrations/: env.py
backend/migrations/versions/: 61d6b0585547_initial_schema.py  9c2a7b4d8e11_add_mock_interviews.py  a4d8b9f3c2e1_add_email_otps.py  b8f4c2a91d73_add_job_post_company.py  e3a1f0c7b92d_add_users.py  f7c91a2e4b20_add_job_post_user_ownership.py
backend/tests/: test_api_persistence.py  test_auth.py  test_job_analyzer.py  test_job_source.py  test_models.py  test_planner.py
browser-extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
docs/: InterviewPrep_AI_Day_1_Project_Log.docx  InterviewPrep_AI_Tomorrow_Handoff.docx  day-1-complete-summary.md  day-1-database-notes.md  day-1-job-analysis-notes.md  day-1-plan.md  know-more-page-brief.md  (+4 more)
(+8 files in other folders)
