[project]
name = "preppilot-ai-backend"
version = "0.1.0"
description = "FastAPI backend for a time-aware AI interview preparation platform."
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
